Updated yomobi.screen.sass to fix Compare page on iPhone vertical view

--- a/app/assets/stylesheets/yomobi.screen.sass
+++ b/app/assets/stylesheets/yomobi.screen.sass
@@ -72,6 +72,7 @@ li
   line-height: 1.5em
   margin: 1em 60px 0.4em 0px
   color: $blue
+  white-space: nowrap
 
 .no-underline
   text-decoration: none
@@ -916,6 +917,7 @@ form
 
 +res480
   +iphone-text-support
+  .sms-marketing
   .compare-table
     table
       margin-left: 3%
